--- a/index.html
+++ b/index.html
@@ -1,161 +1,214 @@
 <!DOCTYPE html>
 <html lang="fr">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-      <link
-         href="https://fonts.googleapis.com/css?family=Roboto:100,900i"
-         rel="stylesheet"
-         />
-      <link rel="stylesheet" href="/public/css/style.css" />
-      <link rel="stylesheet" href="/public/css/style.css.map" />
-      <title>David Bouhaben ePortfolio</title>
-   </head>
-   <body class="" id="bodyId">
-      <div class="loading--circle loading--full-hight">
-         <div class="loading--box loading--full-hight"></div>
-      </div>
-      <!-- Ici, le nav -->
-      <div id="navId" class="">
-         <nav id="nav" class="nav">
-            <ul>
-               <li class="li">
-                  <a href="/about.html" class="nav__link nav__link--active"
-                     ><i class="fas fa-home icon"></i>Accueil</a
-                     >
-               </li>
-               <li class="li"><a href="#profil" class="nav__link"><i class="fas fa-user icon"></i>Profil</a></li>
-               <li class="li">
-                  <a href="#portfolio" class="nav__link"><i class="fas fa-briefcase icon"></i>Portfolio</a>
-               </li>
-               <li class="li"><a href="#CV" class="nav__link"><i class="fas fa-book-open icon"></i>CV</a></li>
-               <li class="li"><a href="#Contact" class="nav__link"><i class="fas fa-phone icon"></i>Contact</a></li>
-               <li class="li">
-                  <a href="#Activité" class="nav__link"><i class="fas fa-tasks icon"></i>Activité Récente</a>
-               </li>
-               <!-- Langue, Anglais, Francais, Indonésien -->
-               <li class="li">
-                  <a href="#langue" class="nav__link"
-                     ><img
-                     src="./public/image/Drapeau/France.png"
-                     alt="France"
-                     />Version Française</a
-                     >
-               </li>
-               <div class="darkmode">
-                  <span id="darkmode-Text" class="dark__police"
-                     ><i class="far fa-lightbulb claire"></i>Mode claire</span
-                     >
-                  <input
-                     type="checkbox"
-                     name="darkmode"
-                     class="toggle"
-                     id="darkmode"
-                     />
-                  <label for="darkmode" class="toggleBtn"></label>
-               </div>
-            </ul>
-         </nav>
-      </div>
-      <!-- Ici, Header -->
-      <header id="site-header" class="wrapper container-header">
-         <div class="container-header__background">
-            <div class="container-header__info">
-               <div class="container-header__nav">
-                  <div id="home" class="nav nav__logo">
-                     <span class="nav__logo--modifier">
-                     <a href="/index.html"
-                        ><img
-                        src="./public/image/Logo-david-bouhaben.png"
-                        alt="Logo David Bouhaben"
-                        /></a>
-                     </span>
-                     <div class="hamburger">
-                        <button class="hamburger-toggle">
-                        <span class="bar-top"></span>
-                        <span class="bar-mid"></span>
-                        <span class="bar-bot"></span>
-                        </button>
-                     </div>
-                  </div>
-               </div>
-               <!-- Gif stopped programmatically -->
-               <div id="homepage">
-                  <div>
-                                       <div class="container-information">
-                     <!-- <img src="./public/image/CV.png" alt="Logo CV David Bouhaben"/> -->
-                     <div class="container-information__info container-information__info--modifier">
-                        <h1>David Bouhaben</h1>
-                        <h2>Développeur web/Front-End</h2>
-                     </div>
-                  </div> 
-                  <div class="reseaux-sociaux">
-                  <nav>
-                     <ul>
-                        <li><a href="https://github.com/Darkheadbanger" title="Github"><i class="fab fa-github"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/david-bouhaben-904806b4/" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li><a href="https://twitter.com/Davidbouhaben1" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                     </ul>
-                  </nav>
-                  </div>
-                  <div class="bio">
-                     <p class="bio__element bio__element--modifier">Je suis à la recherche d'un contrat en alternance qui me permettrait d’acquérir de nouvelles compétences dans le développement web (côté Front-End, Back-end ou FullStack).
-                        Vous pouvez regarder ma <a href="https://paper.li/e-1598349115">curation de contenu ici</a>. 
-                        Voulez-vous savoir plus sur moi ? Vous pouvez consulter mon travail sur <a href="https://github.com/Darkheadbanger">Github</a> et vous pouvez télécharger mon <a href="/public/CV/CV_Bouhaben_David_FrontEndDevelopper.pdf" target="_blank" rel="noopener"> CV ici </a>
-                     </p>
-   
-                     <div class="tech tech--modifier">
-   
-                        <div class="container-overlay">
-                           <i class="fas fa-laptop-code fa-2x"></i>
-                           <span>Front End</span> 
-                           <div class="overlay">
-                              <span class="overlay__text overlay__text--modifier">Front End</span>
-                           </div>
-                       
-                       </div>
-                       
-                       <div class="container-overlay">
-                        <i class="fas fa-server fa-2x"></i>
-                        <span>Back End</span> 
-                        <div class="overlay">
-                           <span class="overlay__text overlay__text--modifier">Back End</span>
-                        </div>
-                       </div>
-   
-                       <div class="container-overlay">
-                        <i class="fas fa-mobile-alt fa-2x"></i>
-                        <span>Web Mobile</span> 
-                        <div class="overlay">
-                           <span class="overlay__text overlay__text--modifier">Web Mobile</span>
-                        </div>
-                       </div>
-   
-                       <div class="container-overlay">
-                        <i class="fas fa-brush fa-2x"></i>
-                        <span>Web Design</span> 
-                        <div class="overlay">
-                           <span class="overlay__text overlay__text--modifier">Web Design</span>
-                        </div>
-                       </div>
-   
-                       <!-- <div class="container-overlay-5">
-                        <i class="fas fa-language fa-2x"></i>
-                        <div class="overlay">
-                           <span class="overlay__text overlay__text--modifier">Français, Anglais, Indonésien</span>
-                        </div>
-                       </div> -->
-   
-                     </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100,900i"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="/public/css/style.css.map" />
+    <title>David Bouhaben ePortfolio</title>
+  </head>
+  <body class="" id="bodyId">
+    <div class="loading--circle loading--full-hight">
+      <div class="loading--box loading--full-hight"></div>
+    </div>
+    <!-- Ici, le nav -->
+    <div id="navId" class="">
+      <nav id="nav" class="nav">
+        <ul>
+          <li class="li">
+            <a href="/about.html" class="nav__link nav__link--active"
+              ><i class="fas fa-home icon"></i>Accueil</a
+            >
+          </li>
+          <li class="li">
+            <a href="#profil" class="nav__link"
+              ><i class="fas fa-user icon"></i>Profil</a
+            >
+          </li>
+          <li class="li">
+            <a href="#portfolio" class="nav__link"
+              ><i class="fas fa-briefcase icon"></i>Portfolio</a
+            >
+          </li>
+          <li class="li">
+            <a href="#CV" class="nav__link"
+              ><i class="fas fa-book-open icon"></i>CV</a
+            >
+          </li>
+          <li class="li">
+            <a href="#Contact" class="nav__link"
+              ><i class="fas fa-phone icon"></i>Contact</a
+            >
+          </li>
+          <li class="li">
+            <a href="#Activité" class="nav__link"
+              ><i class="fas fa-tasks icon"></i>Activité Récente</a
+            >
+          </li>
+          <!-- Langue, Anglais, Francais, Indonésien -->
+          <li class="li">
+            <a href="#langue" class="nav__link"
+              ><img
+                src="./public/image/Drapeau/France.png"
+                alt="France"
+              />Version Française</a
+            >
+          </li>
+          <div class="darkmode">
+            <span id="darkmode-Text" class="dark__police"
+              ><i class="far fa-lightbulb claire"></i>Mode claire</span
+            >
+            <input
+              type="checkbox"
+              name="darkmode"
+              class="toggle"
+              id="darkmode"
+            />
+            <label for="darkmode" class="toggleBtn"></label>
+          </div>
+        </ul>
+      </nav>
+    </div>
+    <!-- Ici, Header -->
+    <header id="site-header" class="wrapper container-header">
+      <div class="container-header__background">
+        <div class="container-header__info">
+          <div class="container-header__nav">
+            <div id="home" class="nav nav__logo">
+              <span class="nav__logo--modifier">
+                <a href="/index.html"
+                  ><img
+                    src="./public/image/Logo-david-bouhaben.png"
+                    alt="Logo David Bouhaben"
+                /></a>
+              </span>
+              <div class="hamburger">
+                <button class="hamburger-toggle">
+                  <span class="bar-top"></span>
+                  <span class="bar-mid"></span>
+                  <span class="bar-bot"></span>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Gif stopped programmatically -->
+          <div id="homepage">
+            <div>
+              <div class="container-information">
+                <!-- <img src="./public/image/CV.png" alt="Logo CV David Bouhaben"/> -->
+                <div
+                  class="container-information__info container-information__info--modifier"
+                >
+                  <h1>David Bouhaben</h1>
+                  <h2>Développeur web/Front-End</h2>
+                </div>
+              </div>
+              <div class="reseaux-sociaux">
+                <nav>
+                  <ul>
+                    <li>
+                      <a href="https://github.com/Darkheadbanger" title="Github"
+                        ><i class="fab fa-github"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.linkedin.com/in/david-bouhaben-904806b4/"
+                        title="Linkedin"
+                        ><i class="fab fa-linkedin-in"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://twitter.com/Davidbouhaben1"
+                        title="Twitter"
+                        ><i class="fab fa-twitter"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="bio">
+                <p class="bio__element bio__element--modifier">
+                  Je suis à la recherche d'un contrat en alternance qui me
+                  permettrait d’acquérir de nouvelles compétences dans le
+                  développement web (côté Front-End, Back-end ou FullStack).
+                  Vous pouvez regarder ma
+                  <a href="https://paper.li/e-1598349115"
+                    >curation de contenu ici</a
+                  >. Voulez-vous savoir plus sur moi ? Vous pouvez consulter
+                  montravail sur
+                  <a href="https://github.com/Darkheadbanger">Github</a> et
+                  vouspouvez télécharger mon
+                  <a
+                    href="/public/CV/CV_Bouhaben_David_FrontEndDevelopper.pdf"
+                    target="_blank"
+                    rel="noopener"
+                    >CV ici</a
+                  >
+                </p>
+
+                <div class="tech tech--modifier">
+                  <div class="container-overlay">
+                    <i class="fas fa-laptop-code fa-2x"></i>
+                    <span>Front End</span>
+                    <div class="overlay">
+                      <span class="overlay__text overlay__text--modifier"
+                        >Front End</span
+                      >
+                    </div>
                   </div>
 
+                  <div class="container-overlay">
+                    <i class="fas fa-server fa-2x"></i>
+                    <span>Back End</span>
+                    <div class="overlay">
+                      <span class="overlay__text overlay__text--modifier"
+                        >Back End</span
+                      >
+                    </div>
                   </div>
-               </div>
+
+                  <div class="container-overlay">
+                    <i class="fas fa-mobile-alt fa-2x"></i>
+                    <span>Web Mobile</span>
+                    <div class="overlay">
+                      <span class="overlay__text overlay__text--modifier"
+                        >Web Mobile</span
+                      >
+                    </div>
+                  </div>
+
+                  <div class="container-overlay">
+                    <i class="fas fa-brush fa-2x"></i>
+                    <span>Web Design</span>
+                    <div class="overlay">
+                      <span class="overlay__text overlay__text--modifier"
+                        >Web Design</span
+                      >
+                    </div>
+                  </div>
+
+                  <!-- <div class="container-overlay-5">
+                           <i class="fas fa-language fa-2x"></i>
+                           <div class="overlay">
+                              <span class="overlay__text overlay__text--modifier">Français, Anglais, Indonésien</span>
+                           </div>
+                          </div> -->
+                </div>
+              </div>
             </div>
-         </div>
-         </div>
-             <!-- "We are the <strong>music makers,</strong>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- "We are the <strong>music makers,</strong>
          <br/>
          and we are the <strong>dreamers of dreams."</strong> -->
     <!-- </section> -->
@@ -236,14 +289,12 @@
     <!-- </div> -->
     <!-- </main> -->
     <!-- </div> -->
-      </header>
-      <script defer src="./public/JS/loading.js"></script>
-      <script defer src="./public/JS/hamburger.js"></script>
-      <script defer src="./public/JS/nav.js"></script>
-      <script defer src="./public/JS/font-awesome-JS/all.js"></script>
-      <script defer src="./public/JS/font-awesome-JS/all.min.js"></script>
-      <script defer src="./public/JS/darkmode.js"></script>
-      <script defer src="./public/JS/tooltip.js"></script>
-   </body>
+    <script defer src="./public/JS/loading.js"></script>
+    <script defer src="./public/JS/hamburger.js"></script>
+    <script defer src="./public/JS/nav.js"></script>
+    <script defer src="./public/JS/font-awesome-JS/all.js"></script>
+    <script defer src="./public/JS/font-awesome-JS/all.min.js"></script>
+    <script defer src="./public/JS/darkmode.js"></script>
+    <script defer src="./public/JS/tooltip.js"></script>
+  </body>
 </html>
-
